k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-namespace
  labels:
    environment: development
